<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DPet</string>
    <string name="hint">Pet\'inizin ismi</string>
    <string name="btn">Kaydet</string>
    <string name="txt">Pet\'inizin ismi</string>
    <string name="hg" tools:ignore="ExtraTranslation">Hoş geldiniz!</string>
    <string name="can">0</string>
    <string name="guc">0</string>
    <string name="para">0</string>
</resources>
